# longai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  INVARIANTS.md  LICENSE  MIGRATIONS.md  README.md  SECURITY.md  SETUP.md  config.example.toml  env.example  longai  mcp.example.json  model_tiers.example.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_i3.sh  init_mcp.sh  install_skills.example.sh  live_replay.sh  llmstub.py  refresh_models.sh  setup_venv.sh  test_all.sh  test_chat_streaming.sh  test_dryrun.sh  test_e2e.sh  test_features.sh  test_learn.sh  test_models_cache.sh
src/longai/: __main__.py  bot.py  budget_guard.py  cli.py  config.py  enrichment.py  envelope.py  fast_commands.py  loop.py  mcp_client.py  memory.py  models_cache.py  persistence.py  prices.py  router.py  security.py  skill_matcher.py  tier_auto_classifier.py  tier_classifier.py  trace.py
src/longai_mcps/calc/: server.py
src/longai_mcps/evm/: server.py
src/longai_mcps/memory/: server.py
tests/: conftest.py  test_bot.py  test_budget_guard.py  test_calc_mcp.py  test_cli.py  test_config.py  test_enrichment.py  test_envelope.py  test_fast_commands.py  test_loop.py  test_mcp_client.py  test_memory.py  test_models_cache.py  test_outbound_whitelist.py  test_persistence.py  test_prices.py  test_router.py  test_security.py  test_skill_loader.py  test_skill_matcher.py  test_tier_auto_classifier.py  test_tier_classifier.py  test_trace.py  test_url_fetch.py  test_web_search.py
tests/e2e/: test_prompts.json
tests/fixtures/: echo_mcp.py  mcp.json
tests/golden/: 01_simple_chat.jsonl
(+6 files in other folders)
