[project]
name = "longai"
version = "0.1.0"
description = "Personal Telegram bot with budget-guarded agent loop"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "mcp>=1.0.0",
    "python-telegram-bot==21.10",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]
on_chain_ta = ["requests", "playwright"]
longai_strategy = ["yfinance", "pandas", "numpy"]

[project.scripts]
longai = "longai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longai", "src/longai_mcps"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
